--- a/templates/newplayer.html
+++ b/templates/newplayer.html
@@ -1,10 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>New Players</title>
 </head>
 <body>
-
+<h1>Add new Player</h1>
+<form action="">
+    <label for="role">Role: <br>
+        <select name="role">
+            <option value="Batsman">batsman</option>
+            <option value="Opening batsman">Opening batsman</option>
+            <option value="Top-order batsman">Top-order batsman</option>
+            <option value="Middle-order batsman">Middle-order batsman</option>
+            <option value="Batting allrounder">Batting allrounder</option>
+            <option value="Wicketkeeper">wicketkeeper</option>
+            <option value="Wicketkeeper batsman">Wicketkeeper batsman</option>
+            <option value="Bowler">bowler</option>
+            <option value="Bowling allrounder">Bowling allrounder</option>
+            <option value="Allrounder">allrounder</option>
+        </select>
+    </label><br><br>
+    <label for="name">Name: <br>
+        <input type="text" name="name">
+    </label><br><br>
+    <label for="match">Match: <br>
+        <input type="text" name="match">
+    </label><br><br>
+    <label for="runs">runs: <br>
+        <input type="text" name="runs">
+    </label><br><br>
+    <label for="high_score">high score: <br>
+        <input type="text" name="high_score">
+    </label><br><br>
+    <label for="avg">avg: <br>
+        <input type="text" name="avg">
+    </label><br><br>
+    <label for="century">century: <br>
+        <input type="text" name="century">
+    </label><br><br>
+    <label for="fifty">fifty: <br>
+        <input type="text" name="fifty">
+    </label><br><br>
+    <label for="wickets">wickets: <br>
+        <input type="text" name="wickets">
+    </label><br><br>
+    <label for="bbm">bbm: <br>
+        <input type="text" name="bbm">
+    </label><br><br>
+    <input type="submit" value="create">
+    <a href="#">
+        <button>Cancel</button>
+    </a>
+</form>
 </body>
 </html>
