--- a/templates/teams.html
+++ b/templates/teams.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Teams</title>
 </head>
 <body>
-
+<h1>Cricket World Cup Teams</h1>
+<a href="#">Add new team</a>
+{% for team in teams %}
+    <p><a href="#">{{ team.name }}</a></p>
+    <a href="#">edit</a>
+    <a href="#">delete</a>
+{% endfor %}
 </body>
 </html>
