--- a/templates/deleteteam.html
+++ b/templates/deleteteam.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Delete Teams</title>
 </head>
 <body>
-
+<h1>Are you Sure you want to delete Team {{ team.name }}?</h1>
+<form action="#">
+    <input type="Submit" value="Delete">
+    <a href="#"><button>Cancel</button></a>
+</form>
 </body>
 </html>
