--- a/templates/teams.html
+++ b/templates/teams.html
@@ -12,7 +12,7 @@
 <a href="{{ url_for('new_team') }}">Add new team</a>
 {% for team in teams %}
     <p><a href="#">{{ team.name }}</a></p>
-    <a href="#">edit</a>
+    <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
     <a href="#">delete</a>
 {% endfor %}
 </body>
