--- a/templates/deleteteam.html
+++ b/templates/deleteteam.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <h1>Are you Sure you want to delete Team {{ team.name }}?</h1>
-<form action="#">
+<form action="{{ url_for('delete_team', team_id=team.id) }}" method="post">
     <input type="Submit" value="Delete">
-    <a href="#"><button>Cancel</button></a>
+    <a href="{{ url_for('show_teams') }}"><button>Cancel</button></a>
 </form>
 </body>
 </html>
