--- a/templates/teams.html
+++ b/templates/teams.html
@@ -13,7 +13,7 @@
 {% for team in teams %}
     <p><a href="#">{{ team.name }}</a></p>
     <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
-    <a href="#">delete</a>
+    <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a>
 {% endfor %}
 </body>
 </html>
