--- a/templates/teams.html
+++ b/templates/teams.html
@@ -11,7 +11,7 @@
 <h1>Cricket World Cup Teams</h1>
 <a href="{{ url_for('new_team') }}">Add new team</a>
 {% for team in teams %}
-    <p><a href="#">{{ team.name }}</a></p>
+    <p><a href="{{ url_for('show_players', team_id=team.id) }}">{{ team.name }}</a></p>
     <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
     <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a>
 {% endfor %}
