--- a/templates/players.html
+++ b/templates/players.html
@@ -29,7 +29,7 @@
                 <i>fifty={{ player.fifty }}</i><br>
                 <i>wickets={{ player.wickets }}</i><br>
                 <i>bbm={{ player.bbm }}</i><br>
-                <a href="#">edit</a>
+                <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a>
                 <a href="#">delete</a>
             </p>
         {% endif %}
