--- a/static/styles.css
+++ b/static/styles.css
@@ -1,19 +1,219 @@
-body            { font-family: sans-serif; background-color: #333333; background-image: url('https://cloud.githubusercontent.com/assets/9041401/6119508/7cbced14-b07e-11e4-9dbd-f01488203879.jpg')}
-h1, h2, h3, h4  { color: #CCCCCC; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
-h2              { font-size: 1.2em; }
+body {
+    font-family: sans-serif;
+    background-image: url("http://tremendouswallpapers.com/wp-content/uploads/2014/12/wallpaper_cricket_wallpaper_010-1920x1080.jpg");
+    /* flex-basis: auto; */
+    /* background: fixed; */
+    /* backface-visibility: visible; */
+    /* background-size: auto; */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 
-p               { color: #CCCCCC;}
+h1, h2, h4 {
+    color: #fff9d6;
+}
 
-a {text-decoration: none; color:#FFFFCC; font-size: .75em;}
+h1, h2 {
+    font-family: 'Georgia', serif;
+    margin: 0;
+}
 
-.pane {position:absolute; left: 25%; border: 2px solid;
-    border-radius: 25px; padding: 5px; margin: 5px; border-color: #999999; background-color: #333333; }
-.header         {left:50%; text-align: center;}
-.name {width:50%;display: inline-block; float: left;}
-.description {}
-.price {text-align: right; width:50%; float: right; }
-.editdeletepane{}
+h1 {
+    border-bottom: 3px solid #fffffb;
+}
 
-.flash          { background: #cee5F5; }
+h2 {
+    font-size: 1.2em;
+    /* border-bottom: 2px solid #b82820; */
+    padding: 5px 0px;
+}
+
+h3 {
+    color: #e88982;
+    margin-bottom: 5px;
+}
+
+p {
+    color: #eca7a2;
+    margin-bottom: 2px;
+}
+
+a {
+    text-decoration: none;
+    color: #786135;
+    /* font-size: .75em; */
+}
+
+.pane {
+    background-color: #9bbb58a1;
+    position: absolute;
+    /* display: flex; */
+    /* padding-left: initial; */
+    left: 15%;
+    border: 2px solid;
+    border-radius: 25px;
+    padding: 20px;
+    /* margin: auto; */
+    /* margin-right: auto; */
+    border-color: #fad5cd;
+    width: 70%;
+    /* min-width: 40%; */
+    min-height: 90%;
+    box-shadow: -12px 20px 20px 0px black;
+}
+
+@media screen and (max-width: 620px) {
+    .pane {
+        background-color: #9bbb58a1;
+        position: absolute;
+        /* display: flex; */
+        /* padding-left: initial; */
+        /* left: 20%; */
+        border: 2px solid;
+        border-radius: 25px;
+        padding: 20px;
+        /* margin: auto; */
+        /* margin-right: 8%; */
+        border-color: #fad5cd;
+        /* width: 80%; */
+        /* min-width: 40%; */
+        /* min-height: 100%; */
+        box-shadow: -12px 20px 20px 0px black;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .pane {
+        background-color: #9bbb58a1;
+        position: absolute;
+        /* display: flex; */
+        /* padding-left: initial; */
+        /* left: 20%; */
+        border: 2px solid;
+        border-radius: 25px;
+        padding: 20px;
+        /* margin: auto; */
+        /* margin-right: 8%; */
+        border-color: #fad5cd;
+        /* width: 80%; */
+        /* min-width: 40%; */
+        /* min-height: 100%; */
+        box-shadow: -12px 20px 20px 0px black;
+    }
+}
+
+.minipane {
+    /* float: left; */
+    background-color: #feeac7c2;
+    position: initial;
+    /* display: flex; */
+    /* padding-left: initial; */
+    /* left: 30%; */
+    /* border: 2px solid; */
+    border-radius: 25px;
+    padding: 20px;
+    /* margin: auto; */
+    margin-right: 20px;
+    margin-top: 20px;
+    border-color: #fad5cd;
+    /* width: 150px; */
+    max-width: 300px;
+    /* min-height: 100%; */
+    box-shadow: -4px 6px 20px 0px black;
+}
+
+.header {
+    left: 50%;
+    text-align: center;
+    color: #333;
+}
+
+.name {
+    /* width: 50%; */
+    display: inline-block;
+    float: left;
+    color: #050706;
+}
+
+.description {
+    font-style: italic;
+    font-family: serif;
+    font-size: larger;
+}
+
+img {
+    width: 100%;
+}
+
+.price {
+    text-align: right;
+    width: 50%;
+    float: right;
+    color: #f5f4c3;
+}
+
+.editdeletepane {
+    font-size: 0.75em;
+}
+
+.flash {
+    background: #cee5F5;
+}
+
+.error {
+    background: #f0d6d6;
+    padding: 0.5em;
+}
+
+form {
+    margin-top: 16px;
+}
+
+.flexcontainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flexcontainer > h2 {
+    padding-top: 25px;
+    flex: 1 100%;
+}
+
+.flexcontainer > * {
+    flex-grow: 1;
+}
+
+div.flexcontainer{
+    flex-grow: 1;
+}
+/*@media screen and (max-width: 1200px) {*/
+    /*.flexcontainer > h2 {*/
+        /*padding: 10px;*/
+        /*flex: 1 100%;*/
+    /*}*/
+
+    /*.flexcontainer > * {*/
+        /*flex-grow: 1;*/
+    /*}*/
+
+    /*.pane {*/
+        /*background-color: #9bbb58a1;*/
+        /*position: absolute;*/
+        /*!* display: flex; *!*/
+        /*!* padding-left: initial; *!*/
+        /*left: 15%;*/
+        /*border: 2px solid;*/
+        /*border-radius: 25px;*/
+        /*padding: 20px;*/
+        /*!* margin: auto; *!*/
+        /*!* margin-right: auto; *!*/
+        /*border-color: #fad5cd;*/
+        /*width: 70%;*/
+        /*!* min-width: 40%; *!*/
+        /*!* max-height: 100%; *!*/
+        /*box-shadow: -12px 20px 20px 0px black;*/
+    /*}*/
+/*}*/
+
