--- a/templates/deleteplayer.html
+++ b/templates/deleteplayer.html
@@ -9,10 +9,13 @@
     <title>Delete Player</title>
 </head>
 <body>
-<h1>Are you Sure you want to Delete {{ player.name }} profile?</h1>
-<form action="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}" method="post">
-    <input type="submit" value="Delete">
-    <a href="{{ url_for('show_players', team_id=team.id) }}"><button>Cancel</button></a>
-</form>
+<div class="pane">
+    <h1>Are you Sure you want to Delete {{ player.name }} profile?</h1>
+    <div class="minipane"><form action="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}" method="post">
+        <input type="submit" value="Delete">
+        <a href="{{ url_for('show_players', team_id=team.id) }}">Cancel</a>
+
+    </form></div>
+</div>
 </body>
 </html>
