--- a/templates/editplayer.html
+++ b/templates/editplayer.html
@@ -9,93 +9,97 @@
     <title>Edit Player</title>
 </head>
 <body>
-<h1>Edit Player</h1>
-<form action="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}" method="post">
-    <label for="role">Role: <br>
-        <select name="role">
-            {% if player.role == "Batsman" %}
-                <option value="Batsman" selected>batsman</option>
-            {% else %}
-                <option value="Batsman">batsman</option>
-            {% endif %}
-            {% if player.role == "Opening batsman" %}
-                <option value="Opening batsman" selected>Opening batsman</option>
-            {% else %}
-                <option value="Opening batsman">Opening batsman</option>
-            {% endif %}
-            {% if player.role == "Top-order batsman" %}
-                <option value="Top-order batsman" selected>Top-order batsman</option>
-            {% else %}
-                <option value="Top-order batsman">Top-order batsman</option>
-            {% endif %}
-            {% if player.role == "Middle-order batsman" %}
-                <option value="Middle-order batsman" selected>Middle-order batsman</option>
-            {% else %}
-                <option value="Middle-order batsman">Middle-order batsman</option>
-            {% endif %}
-            {% if player.role == "Batting allrounder" %}
-                <option value="Batting allrounder" selected>Batting allrounder</option>
-            {% else %}
-                <option value="Batting allrounder">Batting allrounder</option>
-            {% endif %}
-            {% if player.role == "Wicketkeeper" %}
-                <option value="Wicketkeeper" selected>Wicketkeeper</option>
-            {% else %}
-                <option value="wicketkeeper">wicketkeeper</option>
-            {% endif %}
-            {% if player.role == "Wicketkeeper batsman" %}
-                <option value="Wicketkeeper batsman" selected>Wicketkeeper batsman</option>
-            {% else %}
-                <option value="Wicketkeeper batsman">Wicketkeeper batsman</option>
-            {% endif %}
-            {% if player.role == "bowler" %}
-                <option value="Bowler" selected>bowler</option>
-            {% else %}
-                <option value="Bowler">bowler</option>
-            {% endif %}
-            {% if player.role == "Bowling allrounder" %}
-                <option value="Bowling allrounder" selected>Bowling allrounder</option>
-            {% else %}
-                <option value="Bowling allrounder">Bowling allrounder</option>
-            {% endif %}
-            {% if player.role == "allrounder" %}
-                <option value="allrounder" selected>allrounder</option>
-            {% else %}
-                <option value="allrounder">allrounder</option>
-            {% endif %}
-        </select>
-    </label><br><br>
-    <label for="name">Name: <br>
-        <input type="text" name="name" placeholder="{{ player.name }}">
-    </label><br><br>
-    <label for="match">Match: <br>
-        <input type="text" name="match" placeholder="{{ player.match }}">
-    </label><br><br>
-    <label for="runs">runs: <br>
-        <input type="text" name="runs" placeholder="{{ player.runs }}">
-    </label><br><br>
-    <label for="high_score">high score: <br>
-        <input type="text" name="high_score" placeholder="{{ player.high_score }}">
-    </label><br><br>
-    <label for="avg">avg: <br>
-        <input type="text" name="avg" placeholder="{{ player.avg }}">
-    </label><br><br>
-    <label for="century">century: <br>
-        <input type="text" name="century" placeholder="{{ player.century }}">
-    </label><br><br>
-    <label for="fifty">fifty: <br>
-        <input type="text" name="fifty" placeholder="{{ player.fifty }}">
-    </label><br><br>
-    <label for="wickets">wickets: <br>
-        <input type="text" name="wickets" placeholder="{{ player.wickets }}">
-    </label><br><br>
-    <label for="bbm">bbm: <br>
-        <input type="text" name="bbm" placeholder="{{ player.bbm }}">
-    </label><br><br>
-    <input type="submit" value="create">
-    <a href="{{ url_for('show_players', team_id=team.id) }}">
-        <button>Cancel</button>
-    </a>
-</form>
+<div class="pane"><h1>Edit Player</h1>
+    <div class="minipane">
+        <form action="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}" method="post">
+            <label for="role">Role: <br>
+                <select name="role">
+                    {% if player.role == "Batsman" %}
+                        <option value="Batsman" selected>batsman</option>
+                    {% else %}
+                        <option value="Batsman">batsman</option>
+                    {% endif %}
+                    {% if player.role == "Opening batsman" %}
+                        <option value="Opening batsman" selected>Opening batsman</option>
+                    {% else %}
+                        <option value="Opening batsman">Opening batsman</option>
+                    {% endif %}
+                    {% if player.role == "Top-order batsman" %}
+                        <option value="Top-order batsman" selected>Top-order batsman</option>
+                    {% else %}
+                        <option value="Top-order batsman">Top-order batsman</option>
+                    {% endif %}
+                    {% if player.role == "Middle-order batsman" %}
+                        <option value="Middle-order batsman" selected>Middle-order batsman</option>
+                    {% else %}
+                        <option value="Middle-order batsman">Middle-order batsman</option>
+                    {% endif %}
+                    {% if player.role == "Batting allrounder" %}
+                        <option value="Batting allrounder" selected>Batting allrounder</option>
+                    {% else %}
+                        <option value="Batting allrounder">Batting allrounder</option>
+                    {% endif %}
+                    {% if player.role == "Wicketkeeper" %}
+                        <option value="Wicketkeeper" selected>Wicketkeeper</option>
+                    {% else %}
+                        <option value="wicketkeeper">wicketkeeper</option>
+                    {% endif %}
+                    {% if player.role == "Wicketkeeper batsman" %}
+                        <option value="Wicketkeeper batsman" selected>Wicketkeeper batsman</option>
+                    {% else %}
+                        <option value="Wicketkeeper batsman">Wicketkeeper batsman</option>
+                    {% endif %}
+                    {% if player.role == "bowler" %}
+                        <option value="Bowler" selected>bowler</option>
+                    {% else %}
+                        <option value="Bowler">bowler</option>
+                    {% endif %}
+                    {% if player.role == "Bowling allrounder" %}
+                        <option value="Bowling allrounder" selected>Bowling allrounder</option>
+                    {% else %}
+                        <option value="Bowling allrounder">Bowling allrounder</option>
+                    {% endif %}
+                    {% if player.role == "allrounder" %}
+                        <option value="allrounder" selected>allrounder</option>
+                    {% else %}
+                        <option value="allrounder">allrounder</option>
+                    {% endif %}
+                </select>
+            </label><br>
+            <label for="name">Name: <br>
+                <input type="text" name="name" placeholder="{{ player.name }}" size="24px">
+            </label><br>
+            <label for="match">Match: <br>
+                <input type="text" name="match" placeholder="{{ player.match }}" size="24px">
+            </label><br>
+            <label for="runs">runs: <br>
+                <input type="text" name="runs" placeholder="{{ player.runs }}" size="24px">
+            </label><br>
+            <label for="high_score">high score: <br>
+                <input type="text" name="high_score" placeholder="{{ player.high_score }}" size="24px">
+            </label><br>
+            <label for="avg">avg: <br>
+                <input type="text" name="avg" placeholder="{{ player.avg }}" size="24px">
+            </label><br>
+            <label for="century">century: <br>
+                <input type="text" name="century" placeholder="{{ player.century }}" size="24px">
+            </label><br>
+            <label for="fifty">fifty: <br>
+                <input type="text" name="fifty" placeholder="{{ player.fifty }}" size="24px">
+            </label><br>
+            <label for="wickets">wickets: <br>
+                <input type="text" name="wickets" placeholder="{{ player.wickets }}" size="24px">
+            </label><br>
+            <label for="bbm">bbm: <br>
+                <input type="text" name="bbm" placeholder="{{ player.bbm }}" size="24px">
+            </label><br>
+            <label for="image_url">Image Url: <br>
+                <input type="text" name="image_url" size="24px">
+            </label><br><br>
+            <input type="submit" value="create">
+            <a href="{{ url_for('show_players', team_id=team.id) }}" size="24px">Cancel</a>
+        </form>
+    </div>
+</div>
 </body>
 </html>
