--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -9,11 +9,20 @@
     <title>New Teams</title>
 </head>
 <body>
+<div class="pane">
     <h1>Add New Team</h1>
-    <form action="{{ url_for('new_team') }}" method="post">
-        <input type="text" name="name" placeholder="Add new Team">
-        <input type="submit" value="Create">
-        <a href="{{ url_for('show_teams') }}"><button>Cancel</button></a>
-    </form>
+    <div class="teamminipane">
+        <form action="{{ url_for('new_team') }}" method="post">
+            <label for="name">Name: <br>
+                <input type="text" name="name" placeholder="Add new Team" size="30px">
+            </label><br><br>
+            <label for="image_url">Image Url: <br>
+                <input type="text" name="image_url" placeholder="Add image url" size="30px">
+            </label><br><br>
+            <input type="submit" value="Create">
+            <a href="{{ url_for('show_teams') }}">Cancel</a>
+        </form>
+    </div>
+</div>
 </body>
 </html>
