--- a/templates/players.html
+++ b/templates/players.html
@@ -9,32 +9,46 @@
     <title>Players</title>
 </head>
 <body>
-<a href="{{ url_for('show_teams') }}"><h1>{{ team.name }}</h1></a>
-{% if players|count == 0 %}
-    <p>Team is yet to be selected</p>
-{% endif %}
-<a href="{{ url_for('new_player', team_id=team.id) }}">Create new Player</a>
+<div class="pane">
+    <div class="header">
+        <a href="{{ url_for('show_teams') }}"><h1>{{ team.name }}</h1></a><br>
+    </div>
+    {% if players|count == 0 %}
+        <p>Team is yet to be selected</p>
+    {% endif %}
+    <a href="{{ url_for('new_player', team_id=team.id) }}">Create new Player</a>
+    <div class="flexcontainer">
+        {% for role in roles %}
+            <div>
+            <h2>{{ role }}</h2>
+            <div class="flexcontainer">
+                {% for player in players %}
+                    {% if player.role == role %}
+                        <div class="minipane">
+                            <b class="name">{{ player.name }}</b><br>
+                            <div class="editdeletepane">
+                                <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a>
+                                <a href="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}">delete</a>
+                            </div>
+                            <br>
+                            <div class="description">
+                                <img src="{{ player.image_url }}"> <br>
+                                <i>Match:{{ player.match }}</i><br>
+                                <i>Runs: {{ player.runs }}</i><br>
+                                <i>High Score: {{ player.high_score }}</i><br>
+                                <i>Avg: {{ player.avg }}</i><br>
+                                <i>Century: {{ player.century }}</i><br>
+                                <i>Fifty: {{ player.fifty }}</i><br>
+                                <i>Wickets: {{ player.wickets }}</i><br>
+                                <i>Bbm: {{ player.bbm }}</i><br>
 
-
-{% for role in roles %}
-    <h2>{{ role }}</h2>
-    {% for player in players %}
-        {% if player.role == role %}
-            <p>
-                <b>{{ player.name }}</b><br>
-                <i>match={{ player.match }}</i><br>
-                <i>runs={{ player.runs }}</i><br>
-                <i>high_score={{ player.high_score }}</i><br>
-                <i>avg={{ player.avg }}</i><br>
-                <i>century={{ player.century }}</i><br>
-                <i>fifty={{ player.fifty }}</i><br>
-                <i>wickets={{ player.wickets }}</i><br>
-                <i>bbm={{ player.bbm }}</i><br>
-                <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a>
-                <a href="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}">delete</a>
-            </p>
-        {% endif %}
-    {% endfor %}
-{% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div></div>
+        {% endfor %}
+    </div>
+</div>
 </body>
 </html>
