--- a/templates/teams.html
+++ b/templates/teams.html
@@ -9,12 +9,22 @@
     <title>Teams</title>
 </head>
 <body>
-<h1>Cricket World Cup Teams</h1>
-<a href="{{ url_for('new_team') }}">Add new team</a>
-{% for team in teams %}
-    <p><a href="{{ url_for('show_players', team_id=team.id) }}">{{ team.name }}</a></p>
-    <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
-    <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a>
-{% endfor %}
+
+<div class="pane">
+    <div class="header">
+        <h1>Cricket World Cup Teams</h1>
+    </div>
+    <a href="{{ url_for('new_team') }}">Add new team</a><br><br>
+    <div class="flexcontainer">{% for team in teams %}
+        <div class="teamminipane">
+            <a href="{{ url_for('show_players', team_id=team.id) }}"><h2>{{ team.name }}</h2></a>
+            <div class="editdeletepane">
+                <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
+                <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a><br><br>
+                <img src="{{ team.image_url }}" alt="">
+            </div>
+        </div>
+    {% endfor %}</div>
+</div>
 </body>
 </html>
