--- a/templates/teams.html
+++ b/templates/teams.html
@@ -34,6 +34,10 @@
         </div>
     </div>
     <br><br>
+    <footer>
+        <hr>
+        <p align="center">&circledR; Registered Trademark of Shubham Prakash Jha</p>
+    </footer>
 </div>
 </body>
 </html>
