--- a/templates/teams.html
+++ b/templates/teams.html
@@ -13,6 +13,15 @@
 <div class="pane">
     <div class="header">
         <h1>Cricket World Cup Teams</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class=flash>
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endwith %}
     </div>
     {#    <a href="{{ url_for('new_team') }}">Add new team</a><br><br>#}
     <div class="flexcontainer">{% for team in teams %}
