--- a/templates/teams.html
+++ b/templates/teams.html
@@ -28,7 +28,7 @@
         <div class="teamminipane">
             <a href="{{ url_for('show_players', team_id=team.id) }}"><h2>{{ team.name }}</h2></a>
             <div class="editdeletepane">
-                <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a>
+                <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a> |
                 <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a><br><br>
                 <a href="{{ url_for('show_players', team_id=team.id) }}"><img src="{{ team.image_url }}"></a>
             </div>
@@ -37,7 +37,7 @@
         <div class="teamminipane">
             <h2>Add New Team</h2>
             <div><a href="{{ url_for('new_team') }}">
-                <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/3d-transparent-glass-icons-signs/089098-3d-transparent-glass-icon-signs-first-aid.png"
+                <img src="/static/add.png"
                      alt="add new Team">
             </a></div>
         </div>
