--- a/templates/players.html
+++ b/templates/players.html
@@ -37,7 +37,7 @@
                             <div class="minipane">
                                 <b class="name">{{ player.name }}</b><br>
                                 <div class="editdeletepane">
-                                    <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a>
+                                    <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a> |
                                     <a href="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}">delete</a>
                                 </div>
                                 <br>
@@ -63,7 +63,7 @@
             <h2>Add New Player</h2>
             <div class="minipane">
                 <a href="{{ url_for('new_player', team_id=team.id) }}">
-                    <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/3d-transparent-glass-icons-signs/089098-3d-transparent-glass-icon-signs-first-aid.png"
+                    <img src="/static/add.png"
                          alt="add new" style="margin-top: 150px;">
                 </a>
             </div>
