added background image locally

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-image: url("http://tremendouswallpapers.com/wp-content/uploads/2014/12/wallpaper_cricket_wallpaper_010-1920x1080.jpg");
+    background-image: url("background.jpg");
     /* flex-basis: auto; */
     /* background: fixed; */
     /* backface-visibility: visible; */
