add top banner with wesite name and  logni button placeholder.

--- a/templates/deleteteam.html
+++ b/templates/deleteteam.html
@@ -9,6 +9,10 @@
     <title>Delete Teams</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane">
     <h1>Are you Sure you want to delete Team {{ team.name }}?</h1>
     <div class="teamminipane">
