--- a/templates/newplayer.html
+++ b/templates/newplayer.html
@@ -9,6 +9,10 @@
     <title>New Players</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane">
     <h1>Add new Player</h1>
     <form action="{{ url_for('new_player', team_id=team.id) }}" method="post">
