--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -9,6 +9,10 @@
     <title>New Teams</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane">
     <h1>Add New Team</h1>
     <div class="teamminipane">
