--- a/templates/teams.html
+++ b/templates/teams.html
@@ -9,7 +9,11 @@
     <title>Teams</title>
 </head>
 <body>
-
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
+<br>
 <div class="pane">
     <div class="header">
         <h1>Cricket World Cup Teams</h1>
