--- a/templates/deleteplayer.html
+++ b/templates/deleteplayer.html
@@ -9,6 +9,10 @@
     <title>Delete Player</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane">
     <h1>Are you Sure you want to Delete {{ player.name }} profile?</h1>
     <div class="minipane"><form action="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}" method="post">
