--- a/templates/editteam.html
+++ b/templates/editteam.html
@@ -9,6 +9,10 @@
     <title>Edit Teams</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane"><h1>Edit Name of Team {{ team.name }}</h1>
     <div class="teamminipane">
         <form action="{{ url_for('edit_team',team_id=team.id) }}" method="post">
