--- a/templates/players.html
+++ b/templates/players.html
@@ -9,6 +9,10 @@
     <title>Players</title>
 </head>
 <body>
+<div class="top-banner">
+    <p>Cricket Team Submission App</p>
+    <a class="button">Login</a>
+</div>
 <div class="pane">
     <div class="header">
         <a href="{{ url_for('show_teams') }}"><h1>{{ team.name }}</h1></a>
@@ -37,7 +41,8 @@
                             <div class="minipane">
                                 <b class="name">{{ player.name }}</b><br>
                                 <div class="editdeletepane">
-                                    <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a> |
+                                    <a href="{{ url_for('edit_player', team_id=team.id, player_id=player.id) }}">edit</a>
+                                    |
                                     <a href="{{ url_for('delete_player', team_id=team.id, player_id=player.id) }}">delete</a>
                                 </div>
                                 <br>
