load required PRE-REQUISITES script FOR GOOGLE SIGN IN button

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+    {#  Step 3.1 Create login page  #}
+    <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=start" async defer></script>
+    <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
 
 </head>
 <body>
