add GOOGLE SIGN IN button

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,19 @@
 
 </head>
 <body>
+{# step 3.2 GOOGLE PLUS SIGN IN BUTTON #}
+<div id="signinButton">
+    <span class="g-signin"
+          data-scope="openid email"
+          data-clientid="782880132703-mejip9njl1m3gdp50qjivcpqnn4n9b5t.apps.googleusercontent.com"
+          data-redirecturi="postmessage"
+          data-accesstype="offline"
+          data-cookiepolicy="single_host_origin"
+          data-callback="signInCallback"
+          data-approvalprompt="force">
+    </span>
+</div>
+<!--END GOOGLE PLUS SIGN IN BUTTON -->
 
 </body>
 </html>
