create Callback method to handle response sent by google after user authenticates

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,5 +22,38 @@
 </div>
 <!--END GOOGLE PLUS SIGN IN BUTTON -->
 
+{# Step 4 Make a Callback Method #}
+<div id="result"></div>
+
+<script>
+    function signInCallback(authResult) {
+        if (authResult['code']){
+            // Hide the sign-in button now that the user is authorized
+            $('#singinButton').attr('style','display: none');
+
+            // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+            $.ajax({
+                type: 'POST',
+                url: '/gconnect?state={{STATE}}',
+                processData: false,
+                contentType: 'application/octet-stream; charset=utf-8',
+                data: authResult['code'],
+                success: function (result) {
+                    if (result){
+                        $('#result').html('Login Successful</br>'+result+'</br>Redirecting...')
+                        setTimeout(function () {
+                            window.location.href="/teams";
+                        },4000);
+                    }else if (authResult['error']){
+                        console.log('This was an error: '+authResult['error']);
+                    }else {
+                        $('#result').html('Failed to make a server-side call. check your configuration and console');
+                    }
+                }
+
+            });
+        }
+    }
+</script>
 </body>
 </html>
