bug fix in sign in button

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
     function signInCallback(authResult) {
         if (authResult['code']){
             // Hide the sign-in button now that the user is authorized
-            $('#singinButton').attr('style','display: none');
+            $('#signinButton').attr('style','display: none');
 
             // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
             $.ajax({
