--- a/templates/players.html
+++ b/templates/players.html
@@ -10,8 +10,19 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>Cricket Team Submission App</p>
-    <a class="button">Login</a>
+    <p>CRICKET TEAM SUBMISSION APP</p>
+    <div class="login">
+        <div class="button">
+            {% if 'username' not in session %}
+                <a href="{{ url_for('showLogin') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('disconnect') }}">Logout</a>
+            {% endif %}
+        </div>
+        <figure class="creator">
+            <img src="{{ creator.picture }}">
+        </figure>
+    </div>
 </div>
 <div class="pane">
     <div class="header">
@@ -26,7 +37,13 @@
             {% endif %}
         {% endwith %}
     </div>
+    <br>
+    <div class="editdeletepane">
+        <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a> |
+        <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a>
+    </div>
     {% if players|count == 0 %}
+        <br>
         <p>Team is yet to be selected</p>
     {% endif %}
     {#    <a href="{{ url_for('new_player', team_id=team.id) }}">Create new Player</a>#}
