--- a/templates/teams.html
+++ b/templates/teams.html
@@ -10,8 +10,19 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>Cricket Team Submission App</p>
-    <a class="button">Login</a>
+    <p>CRICKET TEAM SUBMISSION APP</p>
+    <div class="login">
+        <div class="button">
+            {% if 'username' not in session %}
+                <a href="{{ url_for('showLogin') }}">Login</a>
+            {% else %}
+                <a href="{{ url_for('disconnect') }}">Logout</a>
+            {% endif %}
+        </div>
+        <figure class="creator">
+            <img src="{{ url_for('static', filename='blank_user.gif') }}">
+        </figure>
+    </div>
 </div>
 <br>
 <div class="pane">
@@ -32,8 +43,7 @@
         <div class="teamminipane">
             <a href="{{ url_for('show_players', team_id=team.id) }}"><h2>{{ team.name }}</h2></a>
             <div class="editdeletepane">
-                <a href="{{ url_for('edit_team', team_id=team.id) }}">edit</a> |
-                <a href="{{ url_for('delete_team', team_id=team.id) }}">delete</a><br><br>
+                <br><br>
                 <a href="{{ url_for('show_players', team_id=team.id) }}"><img src="{{ team.image_url }}"></a>
             </div>
         </div>
