--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="top-banner">
-    <p>Cricket Team Submission App</p>
+    <p>CRICKET TEAM SUBMISSION APP</p>
     <a class="button">Login</a>
 </div>
 <div class="pane">
