--- a/static/styles.css
+++ b/static/styles.css
@@ -34,9 +34,19 @@ h3 {
     margin-bottom: 5px;
 }
 
-p {
+p{
     color: #fffffb;
     margin-bottom: 2px;
+}
+
+.top-banner p {
+    color: #ffffff;
+    /* margin-bottom: 2px; */
+    /* left: 15%; */
+    /* padding-left: 15%; */
+    font-weight: 900;
+    margin-top: 11px;
+    margin-left: 15%;
 }
 
 a {
@@ -50,6 +60,7 @@ hr {
 }
 
 .pane {
+    top: 60px;
     background-color: #9bbb58a1;
     position: absolute;
     /* display: flex; */
@@ -128,6 +139,7 @@ hr {
     /* min-height: 100%; */
     box-shadow: -4px 6px 20px 0px black;
 }
+
 .teamminipane {
     /* float: left; */
     background-color: #feeac7c2;
@@ -213,35 +225,86 @@ form {
     /* flex-grow: 1; */
 }
 
-div.flexcontainer{
+div.flexcontainer {
     flex-grow: 1;
 }
+
+.top-banner {
+    background-color: #9bbb58a1;
+    /* position: relative; */
+    /*!* display: flex; *!*/
+    /*!* padding-left: initial; *!*/
+    /*!* left: 20%; *!*/
+    /* border: 2px solid; */
+    /* border-radius: 25px; */
+    /* padding: 20px; */
+    /*!* margin: auto; *!*/
+    /*!* margin-right: 8%; *!*/
+    /* border-color: #fad5cd; */
+    /* width: 96%; */
+    /*!* min-width: 40%; *!*/
+    /*!* min-height: 100%; *!*/
+    box-shadow: -1px 1px 20px 0px black;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding-right: 0;
+    height: 42px;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    /* background-color: #f5f4c3; */
+    margin-top: -8px;
+    right: 0px;
+}
+
+.button{
+    color: white;
+    position: absolute;
+    /* right: 149px; */
+    /* margin: auto; */
+    top: 13px;
+    /* background-color: #597d1f; */
+    /* padding: 3px; */
+}
+
+.creator img{
+    height: 32px;
+    width: 32px;
+    position: absolute;
+    right: 90px;
+    top: 10%;
+    border-radius: 50%;
+}
+
+.login{position: absolute;right: 12%;}
+
 /*@media screen and (max-width: 1200px) {*/
-    /*.flexcontainer > h2 {*/
-        /*padding: 10px;*/
-        /*flex: 1 100%;*/
-    /*}*/
+/*.flexcontainer > h2 {*/
+/*padding: 10px;*/
+/*flex: 1 100%;*/
+/*}*/
 
-    /*.flexcontainer > * {*/
-        /*flex-grow: 1;*/
-    /*}*/
+/*.flexcontainer > * {*/
+/*flex-grow: 1;*/
+/*}*/
 
-    /*.pane {*/
-        /*background-color: #9bbb58a1;*/
-        /*position: absolute;*/
-        /*!* display: flex; *!*/
-        /*!* padding-left: initial; *!*/
-        /*left: 15%;*/
-        /*border: 2px solid;*/
-        /*border-radius: 25px;*/
-        /*padding: 20px;*/
-        /*!* margin: auto; *!*/
-        /*!* margin-right: auto; *!*/
-        /*border-color: #fad5cd;*/
-        /*width: 70%;*/
-        /*!* min-width: 40%; *!*/
-        /*!* max-height: 100%; *!*/
-        /*box-shadow: -12px 20px 20px 0px black;*/
-    /*}*/
+/*.pane {*/
+/*background-color: #9bbb58a1;*/
+/*position: absolute;*/
+/*!* display: flex; *!*/
+/*!* padding-left: initial; *!*/
+/*left: 15%;*/
+/*border: 2px solid;*/
+/*border-radius: 25px;*/
+/*padding: 20px;*/
+/*!* margin: auto; *!*/
+/*!* margin-right: auto; *!*/
+/*border-color: #fad5cd;*/
+/*width: 70%;*/
+/*!* min-width: 40%; *!*/
+/*!* max-height: 100%; *!*/
+/*box-shadow: -12px 20px 20px 0px black;*/
+/*}*/
 /*}*/
 
